Removed redundant code